# trtc

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
trtc/: README.md  pyproject.toml
trtc-builder/: README.md
trtc-builder/trtc_builder/: __init__.py
trtc-plan/: README.md  pyproject.toml
trtc-plan/tests/: test_plan.py
trtc-plan/trtc_plan/: __init__.py
trtc-server/: CMakeLists.txt  README.md  build.cpp  build_standalone.cpp  builder_config.hpp  common.hpp  main.cpp  openapi.json  openapi_embedded.hpp.in  pyproject.toml  server.cpp
trtc-server/tests/: test_e2e.py  test_server.py
trtc-server/trtc_server/: __init__.py  app.py  build.py  cli.py
trtc/tests/: test_buildspec_and_server.py  test_plan.py  test_plan_and_server.py  test_spec.py
trtc/trtc/: __init__.py  buildspec.py  cli.py  export.py  plan.py  remote.py  runtime.py  spec.py  vast.py
trtc/trtc/client/: __init__.py  cli.py  export.py  remote.py  vast.py
trtc/trtc/server/: __init__.py  app.py  build.py  cli.py
