[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "trtc-server"
version = "0.1.0"
description = "The trtc builder: TensorRT engines from plans, locally or as an HTTP service"
readme = "README.md"
requires-python = ">=3.11"
# The builder environment is fixed and correct by construction: the server
# plus the TensorRT the workspace lock pins (CI re-pins per image tag). No
# per-job resolution happens at runtime.
dependencies = ["trtc", "tensorrt-cu12"]

[project.scripts]
trtc-server = "trtc_server.cli:main"

[tool.setuptools.packages.find]
include = ["trtc_server*"]

[tool.uv.sources]
trtc = { workspace = true }
