[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "trtc"
version = "0.1.0"
description = "Compile PyTorch models to TensorRT engines: spec -> ONNX -> engine, locally or on a remote builder"
readme = "README.md"
requires-python = ">=3.11"
# Only the shared plan/manifest contract — torch is a peer dependency from
# the host project's lock, and TensorRT is only needed on the builder.
dependencies = ["trtc-plan"]

[project.optional-dependencies]
# `trtc launch` provisioning: the vast.ai CLI.
launch = ["vastai"]

[project.scripts]
trtc = "trtc.client.cli:main"

[tool.setuptools.packages.find]
include = ["trtc*"]

[tool.uv.sources]
trtc-plan = { workspace = true }
